--- a/mkillprovider/src/main/resources/application.properties
+++ b/mkillprovider/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-
+server.port=2521
 
 dubbo.application.name = dubbo-demo-server
 
@@ -12,7 +12,7 @@ dubbo.registry.address = zookeeper://localhost:2181?client=curator
 
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/mkill
+spring.datasource.url=jdbc:mysql://localhost:3306/mkill?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 
