--- a/mkillconsumer/src/main/resources/application.properties
+++ b/mkillconsumer/src/main/resources/application.properties
@@ -11,5 +11,7 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
+
+spring.devtools.livereload.port=35730
